<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_BCD_Data" Id="{f363979a-64df-4246-8b26-2ce9dead1690}">
    <Declaration><![CDATA[TYPE T_BCD_Data :
STRUCT
	bolCodeReaded: BOOL;
	uliBarCode: ULINT;
	strBarCode: STRING;
	stDevInfo: T_BCD_DeviceInfo;
	stServInfo: T_BCD_ServiceInfo;
	stOpData: T_BCD_OperatingData;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>