<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_BCD_Error" Id="{a58447e5-b8e7-48fb-b4f5-eb7d091ad122}">
    <Declaration><![CDATA[TYPE T_BCD_Error :
STRUCT
	/// Reset failure
	bolErrAck: BOOL;
	/// atleast one failure active
	bolErrorActive: BOOL;
	/// error in TCP socket
	bolSocketError: BOOL;
	/// error in sensor (SICK)
	bolSensorError: BOOL;
	/// error ID
	udiErrorID: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>