<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="T_Ctrl_SIf_BCC" Id="{f11c08c6-0943-4a3f-848d-ef8e1afb035e}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_BCC :
STRUCT
	/// configuration
	Cfg: T_Ctrl_SIf_BCC_Cfg;
	/// parameter
	Par: T_Ctrl_SIf_BCC_Par;
	/// current values
	Cur: T_Ctrl_SIf_BCC_Cur;
	/// io input
	In: T_Ctrl_SIf_BCC_In;
	/// io output
	Out: T_Ctrl_SIf_BCC_Out;
	/// alarm number used in this controller
	Alm: ARRAY[1..7] OF T_Ctrl_Alm;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>