<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_Ctrl_SIf_BCC_Cur" Id="{d6acd4c7-9b27-4de2-89d8-6109860947d5}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_BCC_Cur :
STRUCT
	/// Sensor connected
	bolConnected: BOOL;
	/// Communication checked during PON
	bolComChecked: BOOL;
	/// 1 = new bar code readed 
	bolNewCodeReaded: BOOL;
	/// 1 = no code readed, answer *No Read* 
	bolNoRead: BOOL;
	/// Sensor data
	stData: T_BCC_Data;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>